package proj.util;

import proj.model.Vector2d;

public record Boundary(Vector2d lowerLeft, Vector2d upperRight) {}
