package proj.util;

public enum MoveDirection {
    FORWARD,
    BACKWARD,
    RIGHT,
    LEFT
}
